--- a/app/views/editForm.scala.html
+++ b/app/views/editForm.scala.html
@@ -8,7 +8,7 @@
     
     <h1>Edit book</h1>
     
-    @form(routes.Application.update(id)) {
+    @form(routes.Books.update(id)) {
         
         <fieldset>
         
@@ -27,12 +27,12 @@
         
         <div class="actions">
             <input type="submit" value="Save this book" class="btn primary"> or 
-            <a href="@routes.Application.list()" class="btn">Cancel</a> 
+            <a href="@routes.Books.list()" class="btn">Cancel</a> 
         </div>
         
     }
     
-    @form(routes.Application.delete(id), 'class -> "topRight") {
+    @form(routes.Books.delete(id), 'class -> "topRight") {
         <input type="submit" value="Delete this book" class="btn danger">
     }
     
