--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -39,7 +39,7 @@
     </th>
 }
 
-@main {
+@main() {
     
     <h1 id="homeTitle">@Messages("books.list.title", currentPage.getTotalRowCount)</h1>
 
