--- a/app/views/editForm.scala.html
+++ b/app/views/editForm.scala.html
@@ -12,10 +12,10 @@
         
         <fieldset>
         
-            @inputText(bookForm("bookName"), '_label -> "Book name")
-            @inputText(bookForm("introduced"), '_label -> "Introduced date")
-            @inputText(bookForm("discontinued"), '_label -> "Discontinued date")
-            
+           		@inputText(bookForm("bookName"), '_label -> "本の名前")
+	         	@inputText(bookForm("recordedOn"), '_label -> "登録日")
+	        	 @inputText(bookForm("rank"), '_label -> "評価")
+	         
             <!-- select(
                 computerForm("company.id"), 
                 options(Company.options), 
