--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -1,7 +1,6 @@
 @(currentPage: com.avaje.ebean.Page[Book],currentSortBy :String , currentOrder :String,currentFilter :String,logined:Boolean)
 
 
-
 @****************************************
 * Helper generating navigation links    *
 ****************************************@
@@ -40,7 +39,7 @@
 }
 
 @main {
-    
+
     <h1 id="homeTitle">@Messages("books.list.title", currentPage.getTotalRowCount)</h1>
 
     @if(flash.containsKey("success")) {
@@ -52,11 +51,14 @@
     <div id="actions">
         
         <form action="@link(0, Book.TblDef.BOOK_NAME)" method="GET">
-            <input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Filter by computer name...">
+            <input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Filter by book name...">
             <input type="submit" id="searchsubmit" value="Filter by name" class="btn primary">
         </form>
-        
-        <a class="btn success" id="add" href="@routes.Books.create()">Add a new book</a>
+        @if(logined){
+        	<a class="btn success" id="add" href="@routes.Books.create()">Add a new book</a>
+        }else{
+        	<br/>
+        }
         
     </div>
     
