--- a/app/views/createForm.scala.html
+++ b/app/views/createForm.scala.html
@@ -28,6 +28,8 @@
                 '_showConstraints -> true
             ) 
             
+            @inputText(bookForm("amazonUri"), '_label -> "Amazon")
+            
             @textarea(bookForm(Book.TblDef.COMMENT), args = 'rows -> 3, 'cols -> 50, '_label -> "Comment")
             
 
