--- a/app/assets/stylesheets/main/_layout.less
+++ b/app/assets/stylesheets/main/_layout.less
@@ -23,8 +23,9 @@ body {
     & > section {
         position: absolute;
         top: @headerHeight;
-        left: @drawerWidth;
-        right: 0;
+        //left: @drawerWidth;
+        left:30px;
+        right: 30px;
         bottom: 0;
     }
 }
